@@ -1,3 +1,9 @@
+2001-07-09  Bruno Haible  <haible@clisp.cons.org>
+
+	* write-po.c (has_nonascii): New function.
+	(message_print): Warn if the msgid is not fully ASCII.
+	(message_print_obsolete): Likewise.
+
 2001-07-05  Bruno Haible  <haible@clisp.cons.org>
 
 	* msgcomm.c (is_message_selected): Keep the header entry.
